--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "winston": "^3.1.0",
     "winston-transport": "^4.2.0"
   },
+  "peerDependencies": {
+    "winston": "^3.1.0"
+  },
   "devDependencies": {
     "assert": "^1.3.0",
     "eslint": "^5.16.0",
